[gd_scene load_steps=15 format=2]

[ext_resource path="res://Objects/Option/OptionButton/OptionButton.gd" type="Script" id=1]
[ext_resource path="res://Assets/Graphics/Sprites/UI/SelectUI/arrow.png" type="Texture" id=2]
[ext_resource path="res://Assets/Graphics/Sprites/UI/SelectUI/Select.png" type="Texture" id=3]
[ext_resource path="res://Assets/Audio/Mario/cappy.wav" type="AudioStream" id=4]
[ext_resource path="res://Assets/Audio/UI/ui_confirm.wav" type="AudioStream" id=5]

[sub_resource type="StyleBoxEmpty" id=1]

[sub_resource type="StyleBoxEmpty" id=2]

[sub_resource type="StyleBoxEmpty" id=3]

[sub_resource type="DynamicFontData" id=4]
font_path = "res://HennigarD.otf"

[sub_resource type="DynamicFont" id=5]
size = 50
extra_spacing_char = 6
font_data = SubResource( 4 )

[sub_resource type="DynamicFontData" id=6]
font_path = "res://HennigarD.otf"

[sub_resource type="DynamicFont" id=7]
size = 48
extra_spacing_top = 3
extra_spacing_char = 6
font_data = SubResource( 6 )

[sub_resource type="Animation" id=8]
length = 0.2
tracks/0/type = "value"
tracks/0/path = NodePath("ColorRect:rect_position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2 ),
"transitions": PoolRealArray( 4.59479, 1.03526 ),
"update": 0,
"values": [ Vector2( -68, 8 ), Vector2( -6400, 8 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath(".:custom_colors/font_color")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.2 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 0.545098, 0.776471, 0.839216, 1 ), Color( 1, 1, 1, 1 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("HBoxContainer/Label:custom_colors/font_color")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.2 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 0.545098, 0.776471, 0.839216, 1 ), Color( 1, 1, 1, 1 ) ]
}

[sub_resource type="Animation" id=9]
length = 0.2
tracks/0/type = "value"
tracks/0/path = NodePath("ColorRect:rect_position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2 ),
"transitions": PoolRealArray( 0.307786, 1 ),
"update": 0,
"values": [ Vector2( -6400, 8 ), Vector2( -68, 8 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath(".:custom_colors/font_color")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.2 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 0.545098, 0.776471, 0.839216, 1 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("HBoxContainer/Label:custom_colors/font_color")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.2 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ Color( 1, 1, 1, 1 ), Color( 0.545098, 0.776471, 0.839216, 1 ) ]
}

[node name="OptionButton" type="Button"]
margin_right = 146.0
margin_bottom = 73.0
custom_styles/hover = SubResource( 1 )
custom_styles/pressed = SubResource( 2 )
custom_styles/focus = SubResource( 3 )
custom_fonts/font = SubResource( 5 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
button_mask = 0
text = "Option"
flat = true
align = 0
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HBoxContainer" type="HBoxContainer" parent="."]
anchor_left = 1.0
anchor_right = 1.0
anchor_bottom = 0.33
margin_left = -129.0
margin_right = -83.0
margin_bottom = 42.91
grow_horizontal = 0
alignment = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ArrowLeft" type="Sprite" parent="HBoxContainer"]
position = Vector2( 89, 36 )
texture = ExtResource( 2 )

[node name="ArrowLeftShadow" type="Sprite" parent="HBoxContainer/ArrowLeft"]
modulate = Color( 0, 0, 0, 0.392157 )
show_behind_parent = true
position = Vector2( 0, 5 )
texture = ExtResource( 2 )

[node name="Label" type="Label" parent="HBoxContainer"]
margin_right = 46.0
margin_bottom = 67.0
custom_fonts/font = SubResource( 7 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
text = "on"
align = 2
valign = 2
uppercase = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ArrowRight" type="Sprite" parent="HBoxContainer"]
position = Vector2( -39, 37 )
texture = ExtResource( 2 )
flip_h = true

[node name="ArrowRightShadow" type="Sprite" parent="HBoxContainer/ArrowRight"]
modulate = Color( 0, 0, 0, 0.392157 )
show_behind_parent = true
position = Vector2( 0, 5 )
texture = ExtResource( 2 )
flip_h = true

[node name="ColorRect" type="ColorRect" parent="."]
show_behind_parent = true
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -6400.0
margin_top = 8.0
margin_right = -6327.0
margin_bottom = -8.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Select" type="Sprite" parent="ColorRect"]
position = Vector2( 33, 27 )
z_as_relative = false
texture = ExtResource( 3 )

[node name="ColorRect" type="ColorRect" parent="ColorRect"]
show_behind_parent = true
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -3.0
margin_top = 3.0
margin_right = -3.0
margin_bottom = 3.0
color = Color( 0, 0, 0, 0.207843 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/focusOff = SubResource( 8 )
anims/focusOn = SubResource( 9 )

[node name="SFXFocus" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 4 )
bus = "SFX"

[node name="SFXModify" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 5 )
bus = "SFX"
[connection signal="focus_entered" from="." to="." method="_on_OptionButton_focus_entered"]
[connection signal="focus_exited" from="." to="." method="_on_OptionButton_focus_exited"]
